--- a/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/books_list.html
+++ b/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/books_list.html
@@ -5,6 +5,8 @@ Listado de libros
 {% endblock %}
 
 {% block content %}
+<a href="new" class="btn btn-primary mb-2">Crear Book</a>
+
 <table class="table">
     <thead>
         <tr>
