--- a/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/new_book.html
+++ b/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/new_book.html
@@ -24,6 +24,12 @@
             {{form.state}}
     </div>
 
+    <div class="form-group">
+        <label for="type">Tipo</label>
+        <!-- <input type="text" class="form-control" name="state" id="id_state" value=" {{book.state}} "> -->
+            {{form.type}}
+    </div>
+
     <button type="submit" class="btn btn-primary m-2" >Agregar Libro</button>
 </form>
 
