--- a/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/edit_book.html
+++ b/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/edit_book.html
@@ -26,6 +26,12 @@
         </select>
     </div>
 
+    {% for id, value in type %}
+    <div class="form-check">
+        <input type="radio" class="form-check-input" name="type" id="id_type_{{forloop.counter0}}"   {% if book.type == id %} checked {% endif %} value=" {{id}} " >
+        <label for="exampleRadios1" class="form-check-label"> {{value}} </label>
+    </div>
+    {% endfor %}
     <button type="submit" class="btn btn-primary">Actualizar libro</button>
 </form>
 {% endblock %}
