--- a/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/base.html
+++ b/Módulo-6-Desarrollo de Aplicaciones Web con Python Django/proyecto1/books/templates/base.html
@@ -14,6 +14,12 @@
     <article class="container">
         <section class="jumbotron">
             <h3>Books List</h3>
+        {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}">Salir</a>
+        {% else %}
+          <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+
         </section>
 
         <!-- {% load static %}
